--- a/SylDeskForm/SylDeskForm/FormRegistro3.resx
+++ b/SylDeskForm/SylDeskForm/FormRegistro3.resx
@@ -324,23 +324,23 @@
   </data>
   <data name="Buscarbutton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAX0AAAF9AWD9boMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADQUlEQVRYR7WWy08TURSHR6P/gEYTo7ZV6EB7eVgHoxIZMA1pCwkEFYimgKbKhhhkIWyMYYELEqNB
-        hJUrdyxM3GqIcYcrEhMXGnHFXkzKikSv5zdthzt3Tgdq6+LrY+g5332cey6GlJIlHIudCNU3DYWiYp5Y
-        DZniJ71vhMz4Cr1P03vSsqzDXGwl+B8YxoGwKSZIsk3IIMJR8TkSFef0HJXg+RJpbIzQTD9wsgB2QvXi
-        sdHVdUjNtV/cD448Kn5pyV3qWtplJJZg/+Zgirdq4v1SeKFl52YurvTLzNRrOTz/SY4ub8iRl9/ktdn3
-        8mruqTwrLnh+62CKMV2wF85Lcc/dRGGzWdqjc44QYo6h+TXZmrzlHUBUbJ0yW0/qkiAK1a4VHOScVCe7
-        +FXGLvWoA5Cno+INJyqHUTxqbgIse9DMdQZm38lwQ4s6iDxt6UFOxmFQAM65mwB7zomCSKRuqwOg49kU
-        42QcGMCqGlwquEroHHviGQCtapaTcRjFDucE4qhxgr3ofbjiGQAV9TNOxoEV2CgF4pxXsv8lUvdfeQcQ
-        FY84GQetgNPb3WCcc04SRPvQjHcAZjzDyTiwAtNqMJoMJynPdxm/3OsZQF1dy3FOxoEVSKrB6HBoMrzM
-        T3J8wSMnNjlROQxcqbjV1CTocGgynFDlxtxHeSZuqXI6AWKGE5XDecGVSsE7aiJ0ODQZToxlx8x1eTxx
-        cTszeOeYLgnC/YArVU0G0OHQZHDOcdRQ7Sg4fc9BpKFZXs/ek9nxyfXB3NQRVRLE7ge6z3Gl6on3A+Td
-        fcMkf1Bkcn1gdOKoKiqH7wGuVEq6pUvKgWUvzLwg77uZk+3d/dKy038sO/PD6kjd1R0q7ENcqbjVSJDX
-        hQqbKDjsOWZckpPYT0dqGf9zcC7fAxXcarhY0NvRXtHh0GT0c449xyCKMy/HkhpTwvfgX8Gek4SWnZU7
-        nLczi3qc50u1OHvOiD10pF+oMZ4E1dJmp3Os1M9CKcaXpFpQcIzQR5udeo7fs0mqAdVOgiVdyNHWmRph
-        k9QCFBwn9dCZ/sIG1woUHCveJc8G1hKSLGhSlTU2qNag4Bj574TdY7MB/wMUHPacxHliDXIppfEXNGSB
-        FnBkrwgAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        fQAAAX0BYP1ugwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANBSURBVFhHtZbL
+        TxNRFIdHo/+ARhOjtlXoQHt5WAejEhkwDWkLCQQViKaApsqGGGQhbIxhgQsSo0GElSt3LEzcaohxhysS
+        ExcaccVeTMqKRK/nN22HO3dOB2rr4utj6DnffZx7LoaUkiUci50I1TcNhaJinlgNmeInvW+EzPgKvU/T
+        e9KyrMNcbCX4HxjGgbApJkiyTcggwlHxORIV5/QcleD5EmlsjNBMP3CyAHZC9eKx0dV1SM21X9wPjjwq
+        fmnJXepa2mUklmD/5mCKt2ri/VJ4oWXnZi6u9MvM1Gs5PP9Jji5vyJGX3+S12ffyau6pPCsueH7rYIox
+        XbAXzktxz91EYbNZ2qNzjhBijqH5NdmavOUdQFRsnTJbT+qSIArVrhUc5JxUJ7v4VcYu9agDkKej4g0n
+        KodRPGpuAix70Mx1BmbfyXBDizqIPG3pQU7GYVAAzrmbAHvOiYJIpG6rA6Dj2RTjZBwYwKoaXCq4Sugc
+        e+IZAK1qlpNxGMUO5wTiqHGCveh9uOIZABX1M07GgRXYKAXinFey/yVS9195BxAVjzgZB62A09vdYJxz
+        ThJE+9CMdwBmPMPJOLAC02owmgwnKc93Gb/c6xlAXV3LcU7GgRVIqsHocGgyvMxPcnzBIyc2OVE5DFyp
+        uNXUJOhwaDKcUOXG3Ed5Jm6pcjoBYoYTlcN5wZVKwTtqInQ4NBlOjGXHzHV5PHFxOzN455guCcL9gCtV
+        TQbQ4dBkcM5x1FDtKDh9z0GkoVlez96T2fHJ9cHc1BFVEsTuB7rPcaXqifcD5N19wyR/UGRyfWB04qgq
+        KofvAa5USrqlS8qBZS/MvCDvu5mT7d390rLTfyw788PqSN3VHSrsQ1ypuNVIkNeFCpsoOOw5ZlySk9hP
+        R2oZ/3NwLt8DFdxquFjQ29Fe0eHQZPRzjj3HIIozL8eSGlPC9+BfwZ6ThJadlTuctzOLepznS7U4e86I
+        PXSkX6gxngTV0manc6zUz0IpxpekWlBwjNBHm516jt+zSaoB1U6CJV3I0daZGmGT1AIUHCf10Jn+wgbX
+        ChQcK94lzwbWEpIsaFKVNTao1qDgGPnvhN1jswH/AxQc9pzEeWINciml8Rc0ZIEWcGSvCAAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
